# s12y-jobcarbon

./: .gitignore  AGENTS.md  FUTURE.md  METHODOLOGY.md  PLAN.md  README.md  jobcarbon.py  pyproject.toml
src/: batch.py  engine.py  generator.py  jobcarbon.py  loader.py  models.py  registry.py  synthesis.py  yamldump.py
templates/: full.yaml  full_gpu.yaml  host_only.yaml  host_only_gpu.yaml
tests/: conftest.py  test_engine.py  test_generator.py  test_loader.py  test_synthesis.py
