[project]
name = "jobcarbon"
version = "0.1.0"
description = "generate Impact Framework observations from OSCAR jobs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[project.scripts]
jobcarbon = "jobcarbon:main"
batch = "batch:main"
